--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="virtus_aljon_casestudy1_2023.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -292,6 +292,6 @@
 
   </main>
 
-  <script src="virtus_aljon_casestudy1_2023.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
